# SimpleShortener

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  Dockerfile.armv7  LICENSE.txt  README.md  SECURITY.md  buildkitd.toml  config.json  config.toml  doc.md  docker-compose.yml  nginx.example.conf  simpleshortener.service  sqlx-data.json  test.db  tests.http
.github/ISSUE_TEMPLATE/: bug_report.md  new-feature.md
.github/workflows/: build.yml  check.yml  devskim.yml  docker-aarch64.yml  docker-amd64.yml  docker-armv7.yml  release.yml  rust.yml  unstable.yml
dockerfiles/: Dockerfile.armv7
migrations/: 20220125031236_Initial_migration.sql  20220526001903_Initial_migration.sql
packaging/: package.sh
packaging/simpleshortener_0.1-b1_amd64/DEBIAN/: control  postinst
packaging/simpleshortener_0.1-b1_arm64/DEBIAN/: control
packaging/simpleshortener_0.1-b1_arm64/etc/simpleshortener/: config.toml
packaging/simpleshortener_0.1-b1_arm64/etc/systemd/system/: simpleshortener.service
packaging/simpleshortener_0.1-b2_amd64/DEBIAN/: control  postinst  prerm
packaging/simpleshortener_0.1-b2_amd64/etc/systemd/system/: simpleshortener.service
packaging/simpleshortener_0.1-b2_arm64/DEBIAN/: control  prerm
packaging/simpleshortener_0.1-b2_arm64/usr/lib/systemd/system/: simpleshortener.service
qr/: Cargo.toml
qr/src/: lib.rs
resources/: root.html
src/: admin.rs  app.rs  db.rs  error.rs  files.rs  main.rs  redirect_handler.rs  redirect_handlers.rs  root.html  structs.rs  tests.rs  users.rs  utils.rs
src/resources/: 404.html  doc.html  doc.md  newuser.html  panel.html  panel.js  root.html
src/resources/panel/: panel.html
tests/: Cargo.toml
tests/src/: main.rs  staticfiles.rs
