[package]
name = "simpleshortener"
version = "0.2.0"
edition = "2021"
description = "A quite simple link shortener"
license = "MIT"
repository = "https://github.com/randomairborne/SimpleShortener.git"
keywords = ["web", "links"]
categories = ["web-programming::http-server"]

[features]
tls = ["axum-server", "axum-server/tls-rustls"]
default = []

[dependencies]
axum = { version = "0.4", features = ["json"] }
axum-server = {version = "0.3", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "rt"] }
tokio-stream = { version = "0.1", features = ["net"] }
once_cell = "1.9"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.5"
sha2 = "0.10"
dashmap = { version = "5.0", features = ["serde"] }
async-trait = "0.1"
parking_lot = "0.12"
hyper = "0.14"

[profile.release]
codegen-units = 1
lto = "fat"
