[package]
name = "simpleshortener"
version = "0.2.1"
edition = "2021"
description = "A quite simple link shortener"
license = "MIT"
repository = "https://github.com/randomairborne/SimpleShortener.git"
keywords = ["web", "links"]
categories = ["web-programming::http-server"]


[dependencies]
axum = { version = "0.4", features = ["json"] }
axum-server = "0.3"
axum_static_macro = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "macros", "postgres", "offline"] }
dashmap = { version = "5.0", features = ["serde"] }
async-trait = "0.1"
parking_lot = "0.12"
qr_code = { version = "1.1", features = ["bmp"] }


[dev-dependencies]
tower = "0.4"

[profile.release]
codegen-units = 1
lto = "fat"
